Implementados novos testes de int e unitarios.